<resources>
    <string name="app_name">Colegio Stone</string>
    <string name="colstone_login">COLEGIO STONE</string>
    <string name="bienvenido_login">BIENVENIDO</string>
    <string name="usuario_login">Usuario: </string>
    <string name="contra_login">Contraseña: </string>
    <string name="regreso_login">Ya tengo usuario </string>
    <string name="registro_login">Registro Nuevo </string>
    <string name="inicio_login">Iniciar Sesion </string>
    <string name="nuevo_login">¿No tienes cuenta? Regístrate </string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="bienvenido_registro">REGISTRARME</string>
    <string name="agregar_estudiante">Ingresar nueva nota</string>
    <string name="bienvenido_maestro">Bienvenido/a maestro/a</string>
    <!-- Agregar estudiante -->
    <string name="agregar_bienvenida">Ingresando nota</string>
    <string name="agregar_codigo">Código del estudiante:</string>
    <string name="agregar_nombre">Nombre del estudiante:</string>
    <string name="agregar_apellido">Apellido del estudiante:</string>
    <string name="agregar_grado">Grado del estudiante:</string>
    <string name="agregar_materia">Materia del estudiante:</string>
    <string name="agregar_nota_final">Nota final del estudiante:</string>
    <string name="agregar_aceptar">Guardar</string>
    <string name="agregar_cancelar">Cancelar</string>
    <string-array name="materias">
        <item>Matemática</item>
        <item>Ciencias naturales</item>
        <item>Ciencias sociales</item>
        <item>Lenguaje y literatura</item>
        <item>Moral</item>
        <item>Religión</item>
    </string-array>
</resources>