<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEstudianteActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_bienvenida"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/lbNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_nombre"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtNombreEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"/>

    <TextView
        android:id="@+id/lbApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_apellido"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtApellidoEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"/>
    <TextView
        android:id="@+id/lbGrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_grado"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtGradoEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"/>
    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_aceptar"/>
    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_cancelar"/>
</LinearLayout>